--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "nativescript-platform",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A NativeScript plugin to easily deal with getting the platform running on",
-  "main": "nsplatform.js",
+  "main": "nsplatform",
   "nativescript": {
 	"platforms": {
 		"android": "1.0.0",
         "ios": "1.0.0"
+	},
+	"plugin": {
+	  "nan": "true",
+	  "pan": "true",
+	  "core3": "true",
+	  "category": "Processing"
 	}
   },
   "repository": {
