--- a/src/package.json
+++ b/src/package.json
@@ -1,8 +1,9 @@
 {
   "name": "nativescript-platform",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "A NativeScript plugin to easily deal with getting the platform running on",
   "main": "nsplatform",
+  "typings": "index.d.ts",
   "nativescript": {
 	"platforms": {
 		"android": "1.0.0",
@@ -11,6 +12,7 @@
 	"plugin": {
 	  "nan": "true",
 	  "pan": "true",
+	  "vue": "true",
 	  "core3": "true",
 	  "category": "Processing"
 	}
@@ -20,7 +22,7 @@
     "url": "https://github.com/nathanaela/nativescript-platform.git"
   },
   "keywords": [
-    "NativeScript", "platform", "android", "ios", "windows"
+    "NativeScript", "platform", "android", "ios", "windows", "device", "screen"
   ],
   "author": {
     "name": "Nathanael Anderson",
