--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-platform",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "A NativeScript plugin to easily deal with getting the platform running on",
   "main": "nsplatform",
   "typings": "index.d.ts",
@@ -14,13 +14,12 @@
 	  "pan": "true",
 	  "vue": "true",
 	  "core3": "true",
-      "core6": "true",
 	  "category": "Processing"
 	}
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nathanaela/nativescript-platform.git"
+    "url": "https://git.proplugins.org/proplugins/nativescript-platform.git"
   },
   "keywords": [
     "NativeScript", "platform", "android", "ios", "windows", "device", "screen"
@@ -31,11 +30,14 @@
   },
   "license": {
     "type": "MIT",
-    "url": "https://github.com/nathanaela/nativescript-platform/blob/master/LICENSE"
+    "url": "https://git.proplugins.org/proplugins/nativescript-platform/blob/master/LICENSE"
   },
   "bugs": {
-    "url": "https://github.com/nathanaela/nativescript-platform/issues"
+    "url": "https://git.proplugins.org/proplugins/nativescript-platform/issues"
   },
-  "homepage": "https://github.com/nathanaela/nativescript-platform",
+  "scripts": {
+    "postinstall": "node postinstall.js || echo \"ignore\""
+  },
+  "homepage": "https://git.proplugins.org/proplugins/nativescript-platform",
   "readmeFilename": "README.md"
 }
